@@ -2,13 +2,19 @@ import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
 import java.net.URL;
+import java.net.URI;
 import org.json.JSONArray;
 import org.json.JSONObject;
 
 public class CurrencyConverter {
 
-    public double getExchangeRate(String currencyCode) throws Exception {
-        URL url = new URL("https://api.nbp.pl/api/exchangerates/rates/a/" + currencyCode + "/");
+    public static double getExchangeRate(String currencyCode) throws Exception {
+        if (currencyCode.equals("PLN")) {
+            return 1.0;
+        }
+
+        URI uri = new URI("https://api.nbp.pl/api/exchangerates/rates/a/" + currencyCode + "/");
+        URL url = uri.toURL();
 
         HttpURLConnection connection = (HttpURLConnection) url.openConnection();
         connection.setRequestMethod("GET");
@@ -30,17 +36,4 @@ public class CurrencyConverter {
         return Math.round(exchangeRate * 100.0) / 100.0;
     }
 
-    public static void main(String[] args) {
-        CurrencyConverter currencyConverter = new CurrencyConverter();
-        try {
-            double exchangeRate = currencyConverter.getExchangeRate("USD");
-            System.out.println("Kurs waluty USD: " + exchangeRate);
-            double exchangeRate2 = currencyConverter.getExchangeRate("EUR");
-            System.out.println("Kurs waluty EUR: " + exchangeRate2);
-            double exchangeRate3 = currencyConverter.getExchangeRate("CZK");
-            System.out.println("Kurs waluty CZK: " + exchangeRate3);
-        } catch (Exception e) {
-            System.out.println("Wystąpił błąd: " + e.getMessage());
-        }
-    }
 }
